--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 *{
     margin: 0%;
     padding: 0%;
-    
+    word-break: break-all;    
+    word-wrap: break-word;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -24,6 +25,12 @@ h1{
     /* font-size: clamp(1.5rem , 4vw , 5rem); */
     margin: 1rem 0 ;
 }
+
+.input{
+    display: flex;
+    /* flex-grow: 1; */
+    /* border: solid 2px lavenderblush; */
+}
 .names{
     display: flex;
     gap: 2rem;
@@ -37,9 +44,13 @@ h1{
     gap: 1rem;
     flex-direction: column;
 }
-input{
+input[type = "text" ],input[ type="email"]{
+    display: flex;
+    width: 100%;
+    /* flex-wrap: wrap; */
     padding: 0.5rem;
     border-radius: 5pt;
+    resize: vertical;
     border: solid 1pt lightgrey;
 }
 /* input:hover,input:active,input::selection,input:focus,input:focus-visible{
